--- a/docker-build-catgpt.yml
+++ b/docker-build-catgpt.yml
@@ -13,7 +13,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to Yandex Cloud Registry
-        run: yc registry login
+#        run: yc registry login
+        run: |
+          echo "$YANDEX_CLOUD_SERVICE_ACCOUNT_KEY" | yc auth login --service-account-key -
+          docker login -u jsonkey -p "$(yc registry get-credentials)" $YANDEX_CLOUD_REGISTRY_URL
+        env:
+          YANDEX_CLOUD_SERVICE_ACCOUNT_KEY: ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}
+          YANDEX_CLOUD_REGISTRY_URL: ${{ secrets.YANDEX_CLOUD_REGISTRY_URL }}
       - name: Build and push Docker image
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt:v1 . --push
