--- a/docker-build-catgpt.yml
+++ b/docker-build-catgpt.yml
@@ -1,56 +1,25 @@
-name: docker-build-catgpt
+name: Docker Build and Deploy catgpt
 
 on:
-  workflow_call:
-    inputs:
-      app-name:
-        required: true
-        type: string
-    secrets:
-      username:
-        required: true
-      password:
-        required: true
-    outputs:
-      app-version:
-        value: ${{ jobs.build.outputs.app-version }}
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
-    name: Docker image
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    outputs:
-      app-version: ${{ steps.meta.outputs.version }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: cr.yandex/crp3b70hbcrvtbg25qbk/${{ inputs.app-name }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-
-      - name: Log into Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: cr.yandex
-          username: ${{ secrets.UNAME }}
-          password: ${{ secrets.PASS }}
-
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          file: ./Dockerfile
-          context: ./catgpt
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+        run: |
+          docker build -t ikfellk/catgpt:v1 .
+          docker tag ikfellk/catgpt:v1 cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
+          echo "$YANDEX_CLOUD_SERVICE_ACCOUNT_KEY" | yc auth login --service-account-key -
+          docker login -u jsonkey -p "$(yc registry get-credentials)" cr.yandex/crp3b70hbcrvtbg25qbk
+          docker push cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
+      env:
+        YANDEX_CLOUD_SERVICE_ACCOUNT_KEY: ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}
+      - name: Deploy to Yandex.Cloud
+        run: |
+          yc compute container create --name registry-ikfellk --image cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt --format json
