--- a/build-catgpt.yml
+++ b/build-catgpt.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: |
-            ikfellk/catgpt
+            igkfellk/y-y-devops-trainings-cloud-1
             ghcr.io/${{ github.repository }}
       
       - name: Build and push Docker images
