--- a/build-catgpt.yml
+++ b/build-catgpt.yml
@@ -33,13 +33,14 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: |
-            igkfellk/y-y-devops-trainings-cloud-1
+            ikfellk/catgpt
             ghcr.io/${{ github.repository }}
       
       - name: Build and push Docker images
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
