--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Publish Docker image
 
 on:
   release:
-    types: [published]
+    types: [tag]
 
 jobs:
   push_to_registry:
@@ -27,7 +27,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          context: .
+          context: ./catgpt
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
