Update and rename docker-build-catgpt.yml to .github/workflows/docker-build-catgpt.yml

--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -2,8 +2,8 @@ name: Docker Build and Deploy catgpt
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'  # Любой тег
 
 jobs:
   build-and-deploy:
