--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -11,15 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Login to Yandex
+        run: docker login -u ${{ secrets.YANDEX_USERNAME }} -p ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}  cr.yandex
       - name: Build and push Docker image
         run: |
           docker build -t ikfellk/catgpt:v1 .
           docker tag ikfellk/catgpt:v1 cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
-          echo "$YANDEX_CLOUD_SERVICE_ACCOUNT_KEY" | yc auth login --service-account-key -
-          docker login -u jsonkey -p "$(yc registry get-credentials)" cr.yandex/crp3b70hbcrvtbg25qbk
           docker push cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
-        env:
-          YANDEX_CLOUD_SERVICE_ACCOUNT_KEY: ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}
-      - name: Deploy to Yandex.Cloud
-        run: |
-          yc compute container create --name ikfellkcatgpt --image cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt --format json
