--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Login to Yandex
-        run: docker login -u ${{ secrets.YANDEX_USERNAME }} -p ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}  cr.yandex
+        run: docker login -u ${{ secrets.YANDEX_USERNAME }} -p ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}  cr.yandex/crp3b70hbcrvtbg25qbk
       - name: Build and push Docker image
         run: |
           docker build -t ikfellk/catgpt:v1 .
