--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
+    if: ${{ github.path == './catgpt' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
