--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          context: ./catgpt
       - name: Login to Yandex
         run: docker login -u ${{ secrets.YANDEX_USERNAME }} -p ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}  cr.yandex/crp3b70hbcrvtbg25qbk
       - name: Build and push Docker image
