--- a/.github/workflows/docker-build-catgpt.yml
+++ b/.github/workflows/docker-build-catgpt.yml
@@ -11,12 +11,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          context: ./catgpt
       - name: Login to Yandex
         run: docker login -u ${{ secrets.YANDEX_USERNAME }} -p ${{ secrets.YANDEX_CLOUD_SERVICE_ACCOUNT_KEY }}  cr.yandex/crp3b70hbcrvtbg25qbk
       - name: Build and push Docker image
         run: |
-          docker build -t ikfellk/catgpt:v1 .
-          docker tag ikfellk/catgpt:v1 cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
+          docker build -t cr.yandex/crp3b70hbcrvtbg25qbk/ikfellk/catgpt:v1 -f ./catgpt
           docker push cr.yandex/crp3b70hbcrvtbg25qbk/ikfellkcatgpt
